# Verstka

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  package.json  pyproject.toml  tsconfig.json
.claude/: architecture.md  dev_plan.md  features.md  monorepo_structure.md  tools_libs.md
apps/api-server/: .env.example  README.md  pyproject.toml
apps/api-server/src/: crud.py  database.py  main.py  models.py  schemas.py
apps/api-server/src/routes/: __init__.py  documents.py  projects.py
apps/assets-server/: README.md
apps/collab-server/: .env.example  README.md  package.json  tsconfig.json
apps/collab-server/src/: server.ts
apps/diagram-service/: README.md  package.json  tsconfig.json
apps/diagram-service/src/: server.ts
apps/frontend/: README.md  index.html  package.json  vite.config.ts
apps/frontend/src/: App.tsx
apps/frontend/src/components/CollaborativeEditor/: CollaborativeEditor.tsx
apps/frontend/src/components/Editor/: Editor.css  Editor.tsx
apps/frontend/src/components/MarkdownPreview/: MarkdownPreview.css  MarkdownPreview.tsx
apps/frontend/src/components/Toolbar/: Toolbar.css  Toolbar.tsx
apps/frontend/src/pages/: EditorPage.css  EditorPage.tsx
apps/frontend/src/utils/: pdfExport.ts
apps/render-service/: .env.example  README.md  pyproject.toml
apps/render-service/src/: __init__.py  main.py  renderer.py
apps/spellcheck-service/: Dockerfile  README.md
apps/tex-compiler/: README.md  compile.sh
docs/: architecture.md  dev-guide.md
infra/: docker-compose.yaml
infra/docker/: api-server.Dockerfile  collab-server.Dockerfile  diagram-service.Dockerfile  frontend.Dockerfile  nginx.conf  render-service.Dockerfile  tex-compiler.Dockerfile
scripts/: build-all.sh  clean-all.sh  dev.sh  lint-all.sh  reset-db.sh  test-all.sh
